tests/errors/e_pxdimpl.pyx
# mode: error

cimport e_pxdimpl_imported

_ERRORS = u"""
 6:4: function definition in pxd file must be declared 'let inline'
18:4: function definition in pxd file must be declared 'let inline'
23:8: function definition in pxd file must be declared 'let inline'
"""
